added learning resources

--- a/css/retro.css
+++ b/css/retro.css
@@ -18,12 +18,12 @@ margin-bottom: 10px;
 }
 
 /* Link styles */
-a {
+nav ul li a {
 /* color: #ffcc00; */
 text-decoration: none;
 border-bottom: 1px dotted #ffcc00;
 }
-a:hover {
+nav ul li a:hover {
 color: #00ff00;
 border-bottom: 1px dotted #00ff00;
 }
@@ -37,14 +37,14 @@ color: #66ccff;
 }
 
 /* Code block styling */
-pre, code {
-background-color: #333333;
-color: #ffcc00;
-padding: 5px;
-font-family: "Consolas", "Courier New", monospace;
-overflow-x: auto;
-border-radius: 5px;
-}
+/*pre, code {*/
+/*background-color: #333333;*/
+/*color: #ffcc00;*/
+/*padding: 5px;*/
+/*font-family: "Consolas", "Courier New", monospace;*/
+/*overflow-x: auto;*/
+/*border-radius: 5px;*/
+/*}*/
 
 /* Paragraph styling */
 p {
