--- a/css/retro.css
+++ b/css/retro.css
@@ -1,3 +1,4 @@
+
 /* Overall page styling */
 body {
 background-color: #1a1a1a;
@@ -5,6 +6,11 @@ color: #e6e6e6;
 font-family: "Courier New", Courier, monospace;
 line-height: 1.6;
 padding: 20px;
+
+    display: grid;  
+    /*grid-template-columns: repeat(auto-fit, 100px);*/
+    /*grid-template-rows: repeat(2, 100px);  */
+
 }
 
 /* Title styles */
