some chanegs inindex.html meta tag

--- a/css/retro.css
+++ b/css/retro.css
@@ -7,7 +7,7 @@ font-family: "Courier New", Courier, monospace;
 line-height: 1.6;
 padding: 20px;
 
-    display: grid;  
+    /*display: grid;  */
     /*grid-template-columns: repeat(auto-fit, 100px);*/
     /*grid-template-rows: repeat(2, 100px);  */
 
